[gd_scene load_steps=9 format=3 uid="uid://c0xj3cgorm7oc"]

[ext_resource type="Script" path="res://Scripts/cow.gd" id="1_2ifnm"]
[ext_resource type="Texture2D" uid="uid://ch01erg38mvhw" path="res://Assets/Animals/cow_walk.png" id="2_24dk8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_sj21v"]
atlas = ExtResource("2_24dk8")
region = Rect2(0, 384, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_kqk01"]
atlas = ExtResource("2_24dk8")
region = Rect2(128, 384, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_lriuk"]
atlas = ExtResource("2_24dk8")
region = Rect2(256, 384, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_sc4tu"]
atlas = ExtResource("2_24dk8")
region = Rect2(384, 384, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_j5jw8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sj21v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kqk01")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lriuk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sc4tu")
}],
"loop": true,
"name": &"walk",
"speed": 6.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_omwrv"]
radius = 27.385

[node name="Cow" type="Node2D"]
scale = Vector2(0.50947, 0.50947)
script = ExtResource("1_2ifnm")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_j5jw8")
animation = &"walk"
autoplay = "walk"
frame_progress = 0.930918

[node name="RayRight" type="RayCast2D" parent="."]
target_position = Vector2(46, 0)

[node name="RayLeft" type="RayCast2D" parent="."]
target_position = Vector2(-31, 0)

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(6, 1)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_omwrv")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
